# terminal-chat

./: .askrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  SETUP.md  ask  pyproject.toml  pytest.ini  requirements.txt
terminal_chat/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_config.py  test_conversation_manager.py  test_cost_tracker.py  test_guardrail_checker.py  test_integration.py  test_keyboard_monitor.py  test_main.py  test_openrouter_client.py  test_security.py
tests/fixtures/: api_responses.json
tests/fixtures/sample_configs/: minimal.askrc  no_token.askrc  valid_full.askrc
